[project]
name = "oncall"
version = "0.1.0"
description = ""
authors = [ {name = "anvl"}]

[tool.poetry.dependencies]
python = ">=3.12"
holidays = "<1.0"
requests = "^2.32.3"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
flake8 = "^7.2.0"
pytest = "^8.3.5"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"



